--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@google-cloud/speech": "^5.4.0",
+    "@google-cloud/text-to-speech": "^4.2.1",
+    "@waylaidwanderer/chatgpt-api": "^1.28.10",
+    "telegraf": "^4.12.2",
+    "utilitas": "^1992.3.42"
+  }
 }
