--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
   "name": "halbot",
+  "description": "Just another ChatGPT/Bing Telegram bob.",
   "version": "1989.6.4",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "private": false,
+  "homepage": "https://github.com/Leask/halbot",
+  "type": "module",
+  "engines": {
+    "node": ">=18.x"
   },
-  "author": "",
+  "main": "index.js",
+  "bin": {
+    "halbot": "bin/halbot.mjs"
+  },
+  "scripts": {
+    "start": "node bin/halbot.mjs",
+    "debug": "node --inspect --trace-warnings debug.mjs",
+    "test": "node --inspect --trace-warnings test.mjs",
+    "updep": "npx npm-check-updates -u && npm install",
+    "gitsync": "( git commit -am \"Released @ `date`\" || true ) && git pull && git push",
+    "build": "npm run updep && ( git commit -am 'update dependencies' || true )",
+    "pub": "npm run build && npm run gitsync",
+    "beta": "npm publish --tag beta"
+  },
+  "author": "Leask Wong <i@leaskh.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Leask/halbot.git"
+  },
   "dependencies": {
     "@google-cloud/speech": "^5.4.0",
     "@google-cloud/text-to-speech": "^4.2.1",
     "@waylaidwanderer/chatgpt-api": "^1.28.10",
     "telegraf": "^4.12.2",
     "utilitas": "^1992.3.42"
-  }
+  },
+  "devDependencies": {}
 }
