--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "engines": {
     "node": ">=18.x"
   },
-  "main": "index.js",
+  "main": "index.mjs",
   "bin": {
     "halbot": "bin/halbot.mjs"
   },
