--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "dependencies": {
     "@google-cloud/speech": "^5.4.0",
     "@google-cloud/text-to-speech": "^4.2.1",
-    "@waylaidwanderer/chatgpt-api": "^1.33.0",
+    "@waylaidwanderer/chatgpt-api": "^1.33.1",
+    "csv-parse": "^5.3.6",
     "telegraf": "^4.12.2",
-    "utilitas": "^1992.4.44"
+    "utilitas": "^1992.4.46"
   }
 }
