--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@google-cloud/speech": "^5.4.0",
     "@google-cloud/text-to-speech": "^4.2.1",
+    "@google-cloud/vision": "^3.1.2",
     "@mozilla/readability": "^0.4.4",
     "@waylaidwanderer/chatgpt-api": "^1.34.0",
     "csv-parse": "^5.3.6",
@@ -38,7 +39,7 @@
     "jsdom": "^21.1.1",
     "mysql2": "^3.2.0",
     "telegraf": "^4.12.2",
-    "utilitas": "^1993.3.21",
+    "utilitas": "^1993.3.22",
     "youtube-transcript": "^1.0.5"
   }
 }
