--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "url": "https://github.com/Leask/halbot.git"
   },
   "dependencies": {
-    "@google-cloud/speech": "^5.4.0",
-    "@google-cloud/text-to-speech": "^4.2.1",
-    "@google-cloud/vision": "^3.1.2",
+    "@google-cloud/speech": "^5.4.1",
+    "@google-cloud/text-to-speech": "^4.2.2",
+    "@google-cloud/vision": "^3.1.3",
     "@mozilla/readability": "^0.4.4",
-    "@waylaidwanderer/chatgpt-api": "^1.35.0",
+    "@waylaidwanderer/chatgpt-api": "github:Leask/node-chatgpt-api",
     "csv-parse": "^5.3.6",
     "ioredis": "^5.3.1",
     "jsdom": "^21.1.1",
-    "mysql2": "^3.2.0",
+    "mysql2": "^3.2.1",
     "telegraf": "^4.12.2",
-    "utilitas": "^1993.3.52",
+    "utilitas": "^1994.0.2",
     "youtube-transcript": "^1.0.5"
   }
 }
