--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ioredis": "^5.3.2",
     "jsdom": "^21.1.1",
     "mysql2": "^3.2.1",
+    "office-text-extractor": "^2.0.0",
     "telegraf": "^4.12.2",
     "utilitas": "^1994.0.11",
     "youtube-transcript": "^1.0.5"
