--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "url": "https://github.com/Leask/halbot.git"
   },
   "dependencies": {
-    "@google-cloud/speech": "^5.4.1",
-    "@google-cloud/text-to-speech": "^4.2.2",
-    "@google-cloud/vision": "^3.1.3",
+    "@google-cloud/speech": "^5.6.0",
+    "@google-cloud/text-to-speech": "^4.2.3",
+    "@google-cloud/vision": "^3.1.4",
     "@mozilla/readability": "^0.4.4",
-    "@waylaidwanderer/chatgpt-api": "github:Leask/node-chatgpt-api",
-    "csv-parse": "^5.3.10",
+    "@waylaidwanderer/chatgpt-api": "1.37",
+    "csv-parse": "^5.4.0",
     "ioredis": "^5.3.2",
-    "jsdom": "^22.0.0",
-    "mysql2": "^3.2.4",
-    "office-text-extractor": "^2.0.0",
+    "jsdom": "^22.1.0",
+    "mysql2": "^3.5.2",
+    "office-text-extractor": "^3.0.1",
     "telegraf": "^4.12.2",
-    "utilitas": "^1995.0.4",
+    "utilitas": "^1995.0.10",
     "youtube-transcript": "^1.0.6"
   }
 }
