--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "@google-cloud/text-to-speech": "^4.2.3",
     "@google-cloud/vision": "^3.1.4",
     "@mozilla/readability": "^0.4.4",
-    "@waylaidwanderer/chatgpt-api": "1.37",
+    "@waylaidwanderer/chatgpt-api": "^1.37.2",
     "csv-parse": "^5.4.0",
     "ioredis": "^5.3.2",
     "jsdom": "^22.1.0",
     "mysql2": "^3.5.2",
     "office-text-extractor": "^3.0.1",
     "telegraf": "^4.12.2",
-    "utilitas": "^1995.0.11",
+    "utilitas": "^1995.0.12",
     "youtube-transcript": "^1.0.6"
   }
 }
