--- a/package.json
+++ b/package.json
@@ -29,18 +29,22 @@
     "url": "https://github.com/Leask/halbot.git"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.1",
     "@google-cloud/speech": "^5.6.0",
     "@google-cloud/text-to-speech": "^4.2.3",
     "@google-cloud/vision": "^3.1.4",
     "@mozilla/readability": "^0.4.4",
     "@waylaidwanderer/chatgpt-api": "^1.37.2",
     "csv-parse": "^5.4.0",
+    "fluent-ffmpeg": "^2.1.2",
     "ioredis": "^5.3.2",
     "jsdom": "^22.1.0",
     "mysql2": "^3.5.2",
     "office-text-extractor": "^3.0.1",
     "telegraf": "^4.12.2",
-    "utilitas": "^1995.0.12",
+    "tesseract.js": "^4.1.1",
+    "utilitas": "^1995.0.20",
     "youtube-transcript": "^1.0.6"
   }
 }
