--- a/package.json
+++ b/package.json
@@ -31,20 +31,22 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "@google-cloud/aiplatform": "^3.9.0",
     "@google-cloud/speech": "^6.1.0",
     "@google-cloud/text-to-speech": "^5.0.1",
+    "@google-cloud/vertexai": "^0.1.3",
     "@google-cloud/vision": "^4.0.2",
-    "@mozilla/readability": "^0.4.4",
+    "@mozilla/readability": "^0.5.0",
     "csv-parse": "^5.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "ioredis": "^5.3.2",
     "jsdom": "^23.0.1",
     "mysql2": "^3.6.5",
     "office-text-extractor": "^3.0.2",
-    "openai": "^4.21.0",
+    "openai": "^4.24.1",
     "telegraf": "^4.15.3",
-    "tesseract.js": "^5.0.3",
-    "utilitas": "^1995.2.22",
+    "tesseract.js": "^5.0.4",
+    "utilitas": "^1995.2.42",
     "youtube-transcript": "^1.0.6"
   }
 }
