--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "url": "https://github.com/Leask/halbot.git"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.33.1",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google-cloud/speech": "^6.7.0",
     "@google-cloud/text-to-speech": "^5.7.0",
     "@google-cloud/vision": "^4.3.2",
+    "@google/generative-ai": "^0.21.0",
     "@mozilla/readability": "^0.5.0",
     "csv-parse": "^5.6.0",
     "fluent-ffmpeg": "^2.1.3",
