lorem-ipsum by default

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ioredis": "^5.4.2",
     "js-tiktoken": "^1.0.16",
     "jsdom": "^25.0.1",
+    "lorem-ipsum": "^2.0.8",
     "mime": "^4.0.6",
     "mysql2": "^3.12.0",
     "office-text-extractor": "^3.0.3",
