--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pgvector": "^0.2.0",
     "telegraf": "^4.16.3",
     "tesseract.js": "^6.0.0",
+    "utilitas": "^1998.1.21",
     "youtube-transcript": "^1.2.1"
   }
 }
