--- a/package.json
+++ b/package.json
@@ -29,30 +29,31 @@
     "url": "https://github.com/Leask/halbot.git"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.36.3",
+    "@anthropic-ai/sdk": "^0.37.0",
+    "@anthropic-ai/vertex-sdk": "^0.7.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google-cloud/speech": "^6.7.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google-cloud/vision": "^4.3.2",
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.22.0",
     "@mozilla/readability": "^0.5.0",
     "csv-parse": "^5.6.0",
     "fluent-ffmpeg": "^2.1.3",
-    "ioredis": "^5.4.2",
-    "js-tiktoken": "^1.0.18",
+    "ioredis": "^5.5.0",
+    "js-tiktoken": "^1.0.19",
     "jsdom": "^26.0.0",
     "lorem-ipsum": "^2.0.8",
     "mime": "^4.0.6",
     "mysql2": "^3.12.0",
     "office-text-extractor": "^3.0.3",
-    "ollama": "^0.5.12",
-    "openai": "^4.83.0",
-    "pg": "^8.13.1",
+    "ollama": "^0.5.14",
+    "openai": "^4.85.4",
+    "pg": "^8.13.3",
     "pgvector": "^0.2.0",
     "telegraf": "^4.16.3",
     "tesseract.js": "^6.0.0",
-    "utilitas": "^1998.2.18",
+    "utilitas": "^1998.2.20",
     "youtube-transcript": "^1.2.1"
   }
 }
