--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@google-cloud/speech": "^7.0.0",
     "@google-cloud/text-to-speech": "^6.0.0",
     "@google-cloud/vision": "^5.0.0",
-    "@google/generative-ai": "^0.24.0",
+    "@google/genai": "^0.4.0",
     "@mozilla/readability": "^0.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.6.0",
@@ -46,12 +46,12 @@
     "mime": "^4.0.6",
     "mysql2": "^3.13.0",
     "office-text-extractor": "^3.0.3",
-    "openai": "^4.87.3",
+    "openai": "^4.87.4",
     "pg": "^8.14.1",
     "pgvector": "^0.2.0",
     "telegraf": "^4.16.3",
     "tesseract.js": "^6.0.0",
-    "utilitas": "^1999.1.15",
+    "utilitas": "^1999.1.24",
     "youtube-transcript": "^1.2.1"
   }
 }
