--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "halbot",
-  "description": "Just another `ChatGPT` / `Gemini` / `Claude` / `Azure` / `Jina` / `Ollama` Telegram bob, which is simple design, easy to use, extendable and fun.",
+  "description": "Just another `ChatGPT` / `Gemini` / `Claude` / `Azure` / `Jina` / `Ollama` Telegram bot, which is simple design, easy to use, extendable and fun.",
   "version": "1993.2.102",
   "private": false,
   "homepage": "https://github.com/Leask/halbot",
