--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
-    "@google-cloud/speech": "^7.2.1",
-    "@google-cloud/text-to-speech": "^6.4.0",
     "@google/genai": "^1.31.0",
     "@mozilla/readability": "^0.6.0",
     "fluent-ffmpeg": "^2.1.3",
+    "google-gax": "^5.0.6",
     "ioredis": "^5.8.2",
     "js-tiktoken": "^1.0.21",
     "jsdom": "^27.2.0",
