--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
+    "@google-cloud/discoveryengine": "^2.5.2",
     "@google/genai": "^1.33.0",
     "@mozilla/readability": "^0.6.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -47,7 +48,7 @@
     "pgvector": "^0.2.1",
     "telegraf": "^4.16.3",
     "tesseract.js": "^6.0.1",
-    "utilitas": "^2000.3.54",
+    "utilitas": "^2000.3.55",
     "youtube-transcript": "^1.2.1"
   }
 }
