--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google-cloud/discoveryengine": "^2.5.2",
-    "@google/genai": "^1.33.0",
+    "@google/genai": "^1.34.0",
     "@mozilla/readability": "^0.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "google-gax": "^5.0.6",
@@ -40,14 +40,15 @@
     "jsdom": "^27.3.0",
     "lorem-ipsum": "^2.0.8",
     "mime": "^4.1.0",
-    "mysql2": "^3.15.3",
+    "mysql2": "^3.16.0",
     "office-text-extractor": "^3.0.3",
-    "openai": "^6.10.0",
+    "openai": "^6.14.0",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "telegraf": "^4.16.3",
+    "telegramify-markdown": "^1.3.0",
     "tesseract.js": "^7.0.0",
-    "utilitas": "^2001.1.77",
+    "utilitas": "^2001.1.79",
     "youtube-transcript": "^1.2.1"
   }
 }
