--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "mime": "^4.1.0",
     "mysql2": "^3.16.0",
     "office-text-extractor": "^3.0.3",
-    "openai": "^6.14.0",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "telegraf": "^4.16.3",
-    "telegramify-markdown": "^1.3.0",
+    "tellegram": "github:Leask/teLLegraM",
     "tesseract.js": "^7.0.0",
-    "utilitas": "^2001.1.79",
+    "utilitas": "^2001.1.83",
     "youtube-transcript": "^1.2.1"
   }
 }
