--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "telegraf": "^4.16.3",
-    "tellegram": "github:Leask/teLLegraM",
+    "tellegram": "^1.1.2",
     "tesseract.js": "^7.0.0",
-    "utilitas": "^2001.1.83",
+    "utilitas": "^2001.1.84",
     "youtube-transcript": "^1.2.1"
   }
 }
