Update index.mjs, lib/hal.mjs, package.json, and pipeline/080_history.mjs Add new files web/turn.html and web/turn.mjs

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "telegraf": "^4.16.3",
     "tellegram": "^1.1.4",
     "tesseract.js": "^7.0.0",
-    "utilitas": "^2001.1.117",
+    "webjam": "^1995.3.3",
     "youtube-transcript": "^1.2.1"
   }
 }
