--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@google-cloud/discoveryengine": "^2.5.2",
     "@google/genai": "^1.42.0",
     "@mozilla/readability": "^0.6.0",
+    "@resvg/resvg-js": "^2.6.2",
     "fluent-ffmpeg": "^2.1.3",
     "google-gax": "^5.0.6",
     "ioredis": "^5.9.3",
@@ -43,8 +44,10 @@
     "mysql2": "^3.17.3",
     "office-text-extractor": "^4.0.0",
     "openai": "^6.22.0",
+    "parse-numeric-range": "^1.3.0",
     "pg": "^8.18.0",
     "pgvector": "^0.2.1",
+    "satori": "^0.19.2",
     "telegraf": "^4.16.3",
     "tellegram": "^1.1.18",
     "tesseract.js": "^7.0.0",
